Bug 1007207 - Don't treat self-implemented classinfo instances differently during XPCWN creation. r=peterv